schema/testdata/validation_operations_update_mutate_id/schema.keel
model Person {
    fields {
        name Text
    }

    actions {
        update updatePerson(id) with (id, name)
    }
}
