schema/testdata/errors/api_invalid_action_names.keel
model Post {
    actions {
        getPost(id)
    }
}

model Blog {
    actions {
        getBlog(id)
    }
}

api Web {
    models {
        Post {
            getPost
            getBlog
        }
        Blog {
            Unknown
        }
    }
}
